--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -144,13 +144,29 @@ Now lets deploy our new wildflyswarm-adj app from JBDS.
 * Watch the build logs in Console tab. The build runs for a couple of minutes, runs test cases,  and you should see the following at the end.
 
 ![](./images/wildflyswarm-adj-first-build.png)
-```
 ### Validating Application on OpenShift
 
+* Login to OpenShift Console - with user admin/admin
+* Click on Project ‘wildflyswarmapps’
+* You should see pod running. See below pic for reference
+
+
+![](./images/8.WildflySwarm.png)
+
+* Click on the route URL on the right corner.
+[http://wildflyswarm-adj-wildflyswarmapps.{yourip}/]
+
+You should a html page when enter 'Invoke' would be invoking a greeting rest service that we just deployed. Here is the screen shot.
+
+![](./images/9.WildflySwarm.png)
 
 
 
-```	
+
+
+
+
+
 
 
 
