--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -161,11 +161,67 @@ You should a html page when enter 'Invoke' would be invoking a greeting rest ser
 ![](./images/9.WildflySwarm.png)
 
 
+### Create Adjective Rest Service
+
+Now that we got an understanding on how build and deploy works, lets create a new service for returning list of adjectives
 
 
+Create Adjective Model Class
+
+* package name - io.openshift.booster.adjective.model
+* Class Name: Adjective
 
 
+![](./images/10.WildflySwarm.png)
 
+Copy paste below class into Adjective class
+
+ 
+package io.openshift.booster.adjective.model;
+
+import java.util.Objects;
+
+public class Adjective {
+
+private String adjective;
+
+public Adjective() {
+}
+
+public Adjective(String adjective) {
+this.adjective = adjective;
+}
+
+public String getAdjective() {
+return adjective;
+}
+
+public Adjective adjective(String adjective) {
+this.adjective = adjective;
+return this;
+}
+
+@Override
+public boolean equals(Object o) {
+if (this == o) return true;
+if (o == null || getClass() != o.getClass()) return false;
+Adjective adjective1 = (Adjective) o;
+return Objects.equals(adjective, adjective1.adjective);
+}
+
+@Override
+public int hashCode() {
+return Objects.hash(adjective);
+}
+
+@Override
+public String toString() {
+final StringBuffer sb = new StringBuffer("Adjective{");
+sb.append("adjective='").append(adjective).append('\'');
+sb.append('}');
+return sb.toString();
+}
+}
 
 
 
