--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -176,7 +176,7 @@ Create Adjective Model Class
 
 Copy paste below class into Adjective class
 
-`<addr>`
+```java
  
 package io.openshift.booster.adjective.model;
 
@@ -223,7 +223,7 @@ sb.append('}');
 return sb.toString();
 }
 }
-`<addr>`
+```
 
 
 
