--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -229,6 +229,12 @@ Create Adjective Rest Service class(File->New->Class)
 package name: io.openshift.booster.adjective.service
 
 Class Name: AdjectiveResource
+
+
+![](./images/11.WildflySwarm.png)
+
+Copy following code for AdjectiveResource class
+
 ```
 package io.openshift.booster.adjective.service;
 
@@ -324,6 +330,243 @@ public class AdjectiveResource {
     }
 }
 ```
+### Create list of adjectives in a text file for our new AdjectiveResource Rest service to return adjectives
+
+File->New -> File under src/main/resources
+
+Name: adjectives.txt
+
+Copy paste below adjectives into adjectives.txt file
+
+```
+artless
+base-court
+bawdy
+bat-fowling
+beslubbering
+beef-witted
+bootless
+beetle-headed
+churlish
+boil-brained
+cockered
+clapper-clawed
+clouted
+clay-brained
+craven
+common-kissing
+currish
+crook-pated
+dankish
+dismal-dreaming
+dissembling
+dizzy-eyed
+droning
+doghearted
+errant
+dread-bolted
+fawning
+earth-vexing
+fobbing
+elf-skinned
+froward
+fat-kidneyed
+frothy
+fen-sucked
+gleeking
+flap-mouthed
+goatish
+fly-bitten
+gorbellied
+folly-fallen
+impertinent
+fool-born
+infectious
+full-gorged
+jarring
+guts-griping
+loggerheaded
+half-faced
+lumpish
+hasty-witted
+mammering
+hedge-born
+mangled
+hell-hated
+mewling
+idle-headed
+paunchy
+ill-breeding
+pribbling
+ill-nurtured
+puking
+knotty-pated
+puny
+milk-livered
+qualling
+motley-minded
+rank
+onion-eyed
+reeky
+plume-plucked
+roguish
+pottle-deep
+ruttish
+pox-marked
+saucy
+reeling-ripe
+spleeny
+rough-hewn
+spongy
+rude-growing
+surly
+rump-fed
+tottering
+shard-borne
+unmuzzled
+sheep-biting
+vain
+spur-galled
+venomed
+swag-bellied
+villainous
+tardy-gaited
+warped
+tickle-brained
+wayward
+toad-spotted
+weedy
+unchin-snouted
+yeasty
+weather-bitten
+cullionly
+whoreson
+fusty
+malmsey-nosed
+caluminous
+rampallian
+wimpled
+lily-livered
+burly-boned
+scurvy-valiant
+misbegotten
+brazen-faced
+odiferous
+unwash'd
+poisonous
+bunch-back'd
+fishified
+leaden-footed
+wart-necked
+muddy-mettled
+pigeon-liver'd
+scale-sided
+```
+Edit src/main/webapp/index.html ( home page for our rest service for viewing response from AdjectiveResource rest service)
+
+
+
+
+```
+<html>
+<head>
+<meta charset="utf-8">
+<title>API Level 0 Mission - AdjectiveService</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\"\ integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+</head>
+
+<body>
+<div class="container">
+<div class="row">
+<div class="sect1">
+<h2 id="_http_booster">Adjective Service Rest Endpoint</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Adjective Service Rest Endpoint</p>
+</div>
+<div class="sect2">
+<h3 id="_using_the_greeting_service">Using the Adjective service</h3>
+
+</div>
+</div>
+</div>
+
+<form class="form-inline">
+<div class="form-group">
+<label for="name">Name</label>
+<input type="text" class="form-control" id="name" placeholder="World">
+</div>
+<button id="invoke" type="submit" class="btn btn-success">Invoke</button>
+</form>
+
+<p class="lead">Result:</p>
+<pre><code id="greeting-result">Invoke the service to see the result.</code></pre>
+</div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js\"\>\</script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js\"\ integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+crossorigin="anonymous"></script>
+
+<script>
+$(document).ready(function () {
+$("#invoke").click(function (e) {
+var n = $("#name").val() || "World";
+$.getJSON("/api/adjective?name=" + n, function (res) {
+$("#greeting-result").text(JSON.stringify(res));
+});
+e.preventDefault();
+});
+});
+</script>
+
+</body>
+
+</html>
+
+
+```
+
+Add following dependency to pom.xml as we are using CDI in our AdjectiveResource class
+
+<dependency>
+
+<groupId>org.wildfly.swarm</groupId>
+
+<artifactId>cdi</artifactId>
+
+</dependency>
+
+
+** Deploy the service to Openshift
+
+right click on the project(wildflyswar-adj) -> 'Run As' ->Run Configuration ->Select maven profile 'wildflyswarm-adj' and hit 'Run'
+
+![](./images/12.WildflySwarm.png)
+
+
+Successful build message should appear as follows
+
+![](./images/13.WildflySwarm.png)
+
+Access the deployed adjective service by going to OpenShift Console and look for a Route URL 
+
+![](./images/14.WildflySwarm.png)
+
+[http://wildflyswarm-adj-wildflyswarmapps.{**yourip**}/]
+
+You should see the following webpage(index.html) when you access above URL. 
+
+Click on Invoke to see the response from the Adjective Rest service
+
+
+![](./images/15.WildflySwarm.png)
+
+
+
+
+
+
 
 
 
