--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -470,15 +470,16 @@ Edit src/main/webapp/index.html ( home page for our rest service for viewing res
 ```
 <html>
 <head>
-<meta charset="utf-8">
-<title>API Level 0 Mission - AdjectiveService</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\"\ integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <title>WildflySwarm- AdjectiveService</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body>
 <div class="container">
-<div class="row">
-<div class="sect1">
+    <div class="row">
+        <div class="sect1">
 <h2 id="_http_booster">Adjective Service Rest Endpoint</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -491,44 +492,44 @@ Edit src/main/webapp/index.html ( home page for our rest service for viewing res
 </div>
 </div>
 
-<form class="form-inline">
-<div class="form-group">
-<label for="name">Name</label>
-<input type="text" class="form-control" id="name" placeholder="World">
-</div>
-<button id="invoke" type="submit" class="btn btn-success">Invoke</button>
-</form>
+        <form class="form-inline">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" placeholder="World">
+            </div>
+            <button id="invoke" type="submit" class="btn btn-success">Invoke</button>
+        </form>
 
-<p class="lead">Result:</p>
-<pre><code id="greeting-result">Invoke the service to see the result.</code></pre>
-</div>
+        <p class="lead">Result:</p>
+        <pre><code id="greeting-result">Invoke the service to see the result.</code></pre>
+    </div>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js\"\>\</script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js\"\ integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 
 <script>
-$(document).ready(function () {
-$("#invoke").click(function (e) {
-var n = $("#name").val() || "World";
-$.getJSON("/api/adjective?name=" + n, function (res) {
-$("#greeting-result").text(JSON.stringify(res));
-});
-e.preventDefault();
-});
-});
+  $(document).ready(function () {
+    $("#invoke").click(function (e) {
+      var n = $("#name").val() || "World";
+      $.getJSON("/api/adjective?name=" + n, function (res) {
+        $("#greeting-result").text(JSON.stringify(res));
+      });
+      e.preventDefault();
+    });
+  });
 </script>
 
 </body>
 
 </html>
 
-
 ```
 
 Add following dependency to pom.xml as we are using CDI in our AdjectiveResource class
-
+```
 <dependency>
 
 <groupId>org.wildfly.swarm</groupId>
@@ -536,7 +537,7 @@ Add following dependency to pom.xml as we are using CDI in our AdjectiveResource
 <artifactId>cdi</artifactId>
 
 </dependency>
-
+```
 
 ** Deploy the service to Openshift
 
