--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -565,15 +565,50 @@ Click on Invoke to see the response from the Adjective Rest service
 
 
 
+### Create Noun Rest Service Project Bundle with Fabric8 Launcher
+* Start the Launcher, if you haven't already done so previously.
+* Click on ‘Launch Your Project ‘
+* Launcher will prompt you to login. You can type in your `developers.redhat.com` credentials to login.
+* Select Deployment type  `I will build and run locally`
+![](./images/1.WildFlySwarm.jpeg)
+* Select mission `Rest API Level 0` can click `Next` to continue. Mission Control, as the name suggests, coordinates actions among dependent services. Its responsibility is to take the following inputs:
+	* 	A GitHub Project
+	* 	A GitHub project	
+	* 	A GitHub user (via OAuth token)	
+	* 	An OpenShift instance's API URL	
+	* 	An OpenShift user (via OAuth token)	
+
+	And performs the following actions:	
+	
+	* 	Fork the GitHub project into the GitHub user's namespace	
+	* Create an OpenShift project	
+	* Create a Jenkins Pipeline BuildConfig	
+	* Associate the OpenShift project with the newly-forked GitHub repo	
+	* Create a GitHub webhook on the newly-forked GitHub project to register push events to the OpenShift project	
+
+* On the next screen select ‘Wildfly Swarm’ as the Runtime and hit ‘ Next’
+![](./images/3.WildFlySwarm.jpeg)	
+
+* On the next screen add the following values for the parameters
+
+	* Runtime Version: 2018.3.3 
+	* GroupId - io.openshift.booster
+	* ArtifactId - wildflyswarm-noun
+	* Version - 1.0.0-SNAPSHOT
 
 
 
+![](./images/17.WildFlySwarm.jpeg)	
 
 
+* Review the values in Review Screen
 
+![](./images/18.WildFlySwarm.jpeg)	
 
+ * hit 'Download as Zip file', Download should begin on your system
+ * Unzip the project
 
-
+**Import Project into Eclipse**
 
 
 
