--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -42,17 +42,17 @@ http://www.literarygenius.info/a1-shakespearean-insults-generator.htm
 
 * On the next screen add the following values for the parameters
 
-	* Runtime Version: 2018.3.3 
+	* Runtime Version: 2018.5.5
 	* GroupId - io.openshift.booster
 	* ArtifactId - wildflyswarm-adj
 	* Version - 1.0.0-SNAPSHOT
-![](./images/4.WildFlySwarm.jpeg)	
+![](./images/21.WildFlySwarm.png)	
 
 **Note** Please use the above values as we'll be using then throught the lab.
 
 * Review Summary on the next page and press on `Download as Zip File` button.
 
-![](./images/5.WildFlySwarm.jpeg)	
+![](./images/22.WildFlySwarm.png)	
 
 Your application bundle will be downloaded as `wildflyswarm-adj.zip`.
 
@@ -598,12 +598,12 @@ Click on Invoke to see the response from the Adjective Rest service
 
 
 
-![](./images/17.WildFlySwarm.jpeg)	
+![](./images/19.WildflySwarm.png)	
 
 
 * Review the values in Review Screen
 
-![](./images/18.WildFlySwarm.jpeg)	
+![](./images/20.WildflySwarm.png)	
 
  * hit 'Download as Zip file', Download should begin on your system
  * Unzip the project
