--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -46,13 +46,13 @@ http://www.literarygenius.info/a1-shakespearean-insults-generator.htm
 	* GroupId - io.openshift.booster
 	* ArtifactId - wildflyswarm-adj
 	* Version - 1.0.0-SNAPSHOT
-![](./images/21.WildFlySwarm.png)	
+![](./images/21.WildflySwarm.png)	
 
 **Note** Please use the above values as we'll be using then throught the lab.
 
 * Review Summary on the next page and press on `Download as Zip File` button.
 
-![](./images/22.WildFlySwarm.png)	
+![](./images/22.WildflySwarm.png)	
 
 Your application bundle will be downloaded as `wildflyswarm-adj.zip`.
 
@@ -608,12 +608,391 @@ Click on Invoke to see the response from the Adjective Rest service
  * hit 'Download as Zip file', Download should begin on your system
  * Unzip the project
 
-**Import Project into Eclipse**
+
+
+### Import Wildfly Noun Project to JBoss Developer Studio
+
+*  Run the following command to unzip the downloaded project bundle, or you can just double click
+
+```
+$ unzip wildflyswarm-noun.zip
+```
+Note the location of your unzipped file.
+
+* Open JBoss Developer Studio (Redsphere Icon) 
+* Choose the following menu options to import the project
+`File` ->`Import`-> `Maven` ->`Existing Maven Projects` , `Browse` to the location where the unzipped project is and select the project. (Most likely you may have unzipped it in the `Downloads` folder!!)
 
 
 
+* Add following dependency in pom.xml
+```
+<dependency>
+<groupId>org.wildfly.swarm</groupId>
+<artifactId>cdi</artifactId>
+</dependency>
+```
 
 
+* Create Noun Model Class (File->New->Class)
+
+ Package: io.openshift.booster.noun.model
+ Class Name: Noun
+ 
+![](./images/23.WildflySwarm.png)
+
+* Copy below details of the class
+
+```
+
+package io.openshift.booster.noun.model;
+
+
+
+import java.util.Objects;
+
+/**
+ * @author Ken Finnigan
+ */
+public class Noun {
+
+    private String noun;
+
+    public Noun() {
+    }
+
+    public Noun(String noun) {
+        this.noun = noun;
+    }
+
+    public String getNoun() {
+        return noun;
+    }
+
+    public Noun noun(String noun) {
+        this.noun = noun;
+        return this;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        Noun noun1 = (Noun) o;
+        return Objects.equals(noun, noun1.noun);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(noun);
+    }
+
+    @Override
+    public String toString() {
+        final StringBuffer sb = new StringBuffer("Noun{");
+        sb.append("noun='").append(noun).append('\'');
+        sb.append('}');
+        return sb.toString();
+    }
+}
+
+```
+* Create NounResource Class
+
+
+	Package: io.openshift.booster.noun.service
+    	Name: NounResource
+	
+
+
+![](./images/24.WildflySwarm.png)
+
+	* Copy below details of the class
+```
+package io.openshift.booster.noun.service;
+
+
+
+import java.io.BufferedReader;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Random;
+
+import javax.annotation.PostConstruct;
+import javax.enterprise.context.ApplicationScoped;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.DELETE;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+
+
+
+import io.openshift.booster.noun.model.Noun;
+
+
+
+/**
+ * @author Ken Finnigan
+ */
+@Path("/")
+@ApplicationScoped
+
+public class NounResource {
+
+    private List<Noun> nouns = new ArrayList<>();
+
+    @PostConstruct
+    public void loadData() {
+        try {
+            InputStream is = this.getClass().getClassLoader().getResourceAsStream("noun.txt");
+            if (is != null) {
+                BufferedReader reader = new BufferedReader(new InputStreamReader(is));
+                reader.lines()
+                        .forEach(noun -> nouns.add(new Noun(noun.trim())));
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+    @GET
+    @Produces(MediaType.APPLICATION_JSON)
+    @Path("/noun")
+    public Noun getNoun() {
+        return nouns.get(new Random().nextInt(nouns.size()));
+    }
+
+    @POST
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Produces(MediaType.APPLICATION_JSON)
+    public Response addNoun(Noun noun) {
+        if (nouns.contains(noun)) {
+            return Response
+                    .status(Response.Status.CONFLICT)
+                    .build();
+        }
+
+        nouns.add(noun);
+
+        return Response
+                .status(Response.Status.CREATED)
+                .entity(noun)
+                .build();
+    }
+
+    @DELETE
+    @Path("/{noun}")
+    public Response deleteNoun(@PathParam("noun") String nounName) {
+        Noun deletingNoun = new Noun(nounName);
+
+        if (!nouns.contains(deletingNoun)) {
+            return Response
+                    .status(Response.Status.NOT_FOUND)
+                    .build();
+        }
+
+        nouns.remove(deletingNoun);
+
+        return Response
+                .noContent()
+                .build();
+    }
+}
+```
+* Create noun.txt(contains list of nouns that NounResource use to return Nouns) file under src/main/resources
+
+Here are the content of noun.txt, please copy and paste it
+
+```
+ apple-john
+ baggage
+ barnacle
+ bladder
+ boar-pig
+ bugbear
+ bum-bailey
+ canker-blossom
+ clack-dish
+ clotpole
+ coxcomb
+ codpiece
+ death-token
+ dewberry
+ flap-dragon
+ flax-wench
+ flirt-gill
+ foot-licker
+ fustilarian
+ giglet
+ gudgeon
+ haggard
+ harpy
+ hedge-pig
+ horn-beast
+ hugger-mugger
+ joithead
+ lewdster
+ lout
+ maggot-pie
+ malt-worm
+ mammet
+ measle
+ minnow
+ miscreant
+ moldwarp
+ mumble-news
+ nut-hook
+ pigeon-egg
+ pignut
+ puttock
+ pumpion
+ ratsbane
+ scut
+ skainsmate
+ strumpet
+ varlot
+ vassal
+ whey-face
+ wagtail
+ knave
+ blind-worm
+ popinjay
+ scullian
+ jolt-head
+ malcontent
+ devil-monk
+ toad
+ rascal
+ Basket-Cockle
+ rapscallion
+
+```
+* Open src/main/webapp/index.html ( home page for our noun service to show result response from Noun Service)
+ Copy below index.html contents
+ 
+ ```
+ 
+ <!--
+  ~
+  ~  Copyright 2016-2017 Red Hat, Inc, and individual contributors.
+  ~
+  ~  Licensed under the Apache License, Version 2.0 (the "License");
+  ~  you may not use this file except in compliance with the License.
+  ~  You may obtain a copy of the License at
+  ~
+  ~  http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~  Unless required by applicable law or agreed to in writing, software
+  ~  distributed under the License is distributed on an "AS IS" BASIS,
+  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~  See the License for the specific language governing permissions and
+  ~  limitations under the License.
+  ~
+  -->
+
+<html>
+
+<head>
+
+  <meta charset="utf-8">
+  <title>NounService - WildFly Swarm</title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+</head>
+
+<body>
+
+<div class="container">
+
+  <div>
+    <div class="sect1">
+<h2 id="_http_booster">NounService</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>An example of simple mapping of a business operation to a remote endpoint. By taking this approach, clients use the HTTP protocol as a transport mechanism to call services. Application engineers define the APIs using a broad interpretation of the REST fundamentals, encouraging freedom in design and quick prototyping.</p>
+</div>
+<div class="sect2">
+<h3 id="_using_the_greeting_service">Using the Noun service</h3>
+
+</div>
+</div>
+</div>
+
+    <form class="form-inline">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" placeholder="World">
+      </div>
+      <button id="invoke" type="submit" class="btn btn-success">Invoke</button>
+    </form>
+
+    <h3>Result:</h3>
+    <pre><code id="greeting-result">Invoke the service to see the result.</code></pre>
+  </div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+
+<script>
+    $(document).ready(function() {
+       $("#invoke").click(function(e) {
+          var n = $("#name").val() || "World";
+          $.getJSON("/api/noun?name=" + n, function(res) {
+              $("#greeting-result").text(JSON.stringify(res));
+          });
+          e.preventDefault();
+       });
+    });
+</script>
+
+</body>
+
+</html>
+ 
+ ```
+ 
+* Deploy the service to Openshift
+
+right click on the project(wildflyswar-noun) -> 'Run As' ->Run Configuration ->Select maven profile 'wildflyswarm-noun' and hit 'Run'
+
+  * Note: if this is first time you are deploying wildflyswarm-noun service, please select maven -> click on new launch configuration -> enter below details
+  
+  	Base Directory: ${workspace_loc:/wildflyswarm-noun}
+	Goals: clean fabric8:deploy -Popenshift
+  
+  
+![](./images/25.WildflySwarm.png)
+
+* You should see a maven build successful message
+
+
+![](./images/26.WildflySwarm.png)
+
+
+* Access the deployed adjective service by going to OpenShift Console and look for a Route URL 
+
+![](./images/27.WildflySwarm.png)
+
+[http://wildflyswarm-adj-wildflyswarmapps.{**yourip**}/]
+
+You should see the following webpage(index.html) when you access above URL. 
+
+* Click on Invoke to see the response from the Adjective Rest service
+
+
+![](./images/28.WildflySwarm.png)
 
 
 
